se continua con el proyecto